[package]
name = "noteiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = "1.0.140"
serde_derive = "1.0.140"
toml = "0.5.9"

[[bin]]
name = "ntsr"
path = "src/main.rs"